<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Equalizer">


    <TextView
        android:id="@+id/doisPontoQuatroKhz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="462dp"
        android:layout_marginBottom="250dp"
        android:text="@string/_2_4khz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/seekBar24Khz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/UmKhz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="414dp"
        android:layout_marginBottom="298dp"
        android:text="@string/_1khz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/seekBar1Khz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/QuatrocentosHz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="367dp"
        android:layout_marginBottom="345dp"
        android:text="@string/_400hz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/seekBar400hz"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="409dp"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="1dp">

            <Toolbar
                android:id="@+id/toolbar2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/spotifyGreen">

                <ImageButton
                    android:id="@+id/goBackButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/spotifyGreen"
                    android:theme="@style/Button.goBack"
                    app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
                    app:layout_constraintEnd_toEndOf="@+id/toolbar2"
                    app:layout_constraintHorizontal_bias="0.044"
                    app:layout_constraintStart_toStartOf="@+id/toolbar2"
                    app:layout_constraintTop_toTopOf="@+id/toolbar2"
                    app:layout_constraintVertical_bias="0.538"
                    app:srcCompat="@drawable/round_arrow_back_24" />
            </Toolbar>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="157dp"
        android:layout_height="154dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.049"
        app:srcCompat="@drawable/baseline_graphic_eq_24" />

    <SeekBar
        android:id="@+id/seekBar6hz"
        android:layout_width="180sp"
        android:layout_height="40sp"
        android:layout_marginTop="257dp"
        android:layout_marginBottom="434dp"
        android:max="12"
        android:min="-12"
        android:progress="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBar1Khz"
        android:layout_width="180sp"
        android:layout_height="40sp"
        android:layout_marginTop="401dp"
        android:layout_marginBottom="290dp"
        android:max="12"
        android:min="-12"
        android:progress="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBar400hz"
        android:layout_width="180sp"
        android:layout_height="40sp"
        android:layout_marginTop="353dp"
        android:layout_marginBottom="338dp"
        android:max="12"
        android:min="-12"
        android:progress="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBar150hz"
        android:layout_width="180sp"
        android:layout_height="40sp"
        android:layout_marginTop="305dp"
        android:layout_marginBottom="386dp"
        android:max="12"
        android:min="-12"
        android:progress="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBar15KHZ"
        android:layout_width="180sp"
        android:layout_height="40sp"
        android:layout_marginTop="501dp"
        android:layout_marginBottom="190dp"
        android:max="12"
        android:min="-12"
        android:progress="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBar24Khz"
        android:layout_width="180sp"
        android:layout_height="40sp"
        android:layout_marginTop="449dp"
        android:layout_marginBottom="242dp"
        android:max="12"
        android:min="-12"
        android:progress="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sessentaHz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="268dp"
        android:layout_marginBottom="444dp"
        android:text="@string/_60hz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/seekBar6hz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <TextView
        android:id="@+id/centoECinquentaHz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_150hz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/seekBar150hz"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sessentaHz"
        app:layout_constraintVertical_bias="0.063" />

    <TextView
        android:id="@+id/quinzeKHZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="510dp"
        android:layout_marginBottom="202dp"
        android:text="@string/_15khz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/seekBar15KHZ"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Salvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="555dp"
        android:layout_marginBottom="128dp"
        android:text="@string/salvar"
        android:theme="@style/Button.green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonCarregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="611dp"
        android:layout_marginBottom="72dp"
        android:text="@string/carregar"
        android:theme="@style/Button.green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>